trend-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
     app.kubernetes.io/name: trend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trend-app
  template:
    metadata:
      labels:
         app.kubernetes.io/name: trend-app
    spec:
      containers:
      - name: nginx
        image: rajbirari9737/trend-app:17
        ports:
        - containerPort: 80
