trend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nodeport
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: trend-app
